--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
 
 <body>
     <main class="grid-2-1">
-        <div class="informations"></div>
+        <div class="informations container">
+            <h1>Lista zadań</h1>
+            <ol>
+                <li>Wypij szklankę wody</li>
+                <li>Umyj zęby</li>
+                <li>Porozciągaj się</li>
+                <li>Zimny prysznic</li>
+            </ol>
+
+            
+        </div>
         <div class="weather">
             <div class="container">
                 <div class="displayWeather">
+                    <h1>Pogoda w Bochni</h1>
+                    <img class="img" src="#" alt="">
                     <h1 class="temp">----°C</h1>
                     <p>Odczuwalna temperatura: <span class="feelslike"></span></p>
                     <p>Wilgotność: <span class="humidity"></span></p>
