--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
     <main class="grid-2-1">
         <div class="informations container">
+
             <h1>Lista zadań</h1>
             <ol>
                 <li>Wypij szklankę wody</li>
@@ -48,23 +49,38 @@
             </div>
             <div class="container">
                 <div class="displayFutureWeather">
-                    <div class="mon">
-                        <h2>20°C</h2>
-                        <p>12:00</p>
-                    </div>
-                    <div class="mon">
-                        <h2>20°C</h2>
-                        <p>15:00</p>
-                    </div>
-                    <div class="mon">
-                        <h2>20°C</h2>
-                        <p>18:00</p>
-                    </div>
-                    <div class="mon">
-                        <h2>20°C</h2>
-                        <p>21:00</p>
-                    </div>
-                </div>
+                    <table>
+                        <thead class="neonheader">
+                            <td>Godzina</td>
+                            <td>Temperatura</td>
+                            <td>Odczuwalna</td>
+                            <td>Wilgotność</td>
+                        </thead>
+                        <tr>
+                            <td>13:00</td>
+                            <td>20°C</td>
+                            <td>23°C</td>
+                            <td>40%</td>
+                        </tr>
+                        <tr>
+                            <td>13:00</td>
+                            <td>20°C</td>
+                            <td>23°C</td>
+                            <td>40%</td>
+                        </tr>
+                        <tr>
+                            <td>13:00</td>
+                            <td>20°C</td>
+                            <td>23°C</td>
+                            <td>40%</td>
+                        </tr>
+                        <tr>
+                            <td>13:00</td>
+                            <td>20°C</td>
+                            <td>23°C</td>
+                            <td>40%</td>
+                        </tr>
+                    </table>
         
             </div>
         </div>
