--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <div class="displayFutureWeather">
                     <table>
                         <thead class="neonheader">
-                            <td>Godzina</td>
-                            <td>Temperatura</td>
-                            <td>Odczuwalna</td>
-                            <td>Wilgotność</td>
+                            <td>Godz</td>
+                            <td>Temmp</td>
+                            <td>Odcz</td>
+                            <td>Wilg</td>
                         </thead>
                         <tr>
                             <td>14:00</td>
