--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <body>
     <main class="grid-2-1">
         <div class="informations container">
+            <h1>Info of the day</h1>
+            <div id="headline">
 
+            </div>
             
         </div>
         <div class="weather">
@@ -43,47 +46,12 @@
                 <div class="displayFutureWeather">
                     <table>
                         <thead class="neonheader">
-                            <td>Godz</td>
-                            <td>Temmp</td>
-                            <td>Odcz</td>
-                            <td>Wilg</td>
+                            <td>Hr</td>
+                            <td>Temp</td>
+                            <td>Weather</td>
+                            <td>Hum</td>
                         </thead>
-                        <tr>
-                            <td>14:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
-                        <tr>
-                            <td>18:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
-                        <tr>
-                            <td>22:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
-                        <tr>
-                            <td>02:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
-                        <tr>
-                            <td>06:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
-                        <tr>
-                            <td>10:00</td>
-                            <td>20°C</td>
-                            <td>23°C</td>
-                            <td>40%</td>
-                        </tr>
+                        <tbody id="tableData"></tbody>
                     </table>
         
             </div>
