--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="weather">
             <div class="container">
                 <div class="displayWeather">
-                    <h1>Pogoda w Bochni</h1>
+                    <h2>Pogoda w Bochni</h2>
                     <img class="img" src="#" alt="">
-                    <h1 class="temp">----°C</h1>
+                    <h3 class="temp">----°C</h3>
                     <p>Odczuwalna temperatura: <span class="feelslike"></span></p>
                     <p>Wilgotność: <span class="humidity"></span></p>
                 </div>
@@ -53,10 +53,9 @@
                         </thead>
                         <tbody id="tableData"></tbody>
                     </table>
-        
+                </div>
             </div>
         </div>
-        
     </main>
 
     <!-- Link to Javascript -->
